Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@gem_ctx_exec@basic-nohangcheck - fail - Failed assertion: err == 0, Hostile unpreemptable context was not cancelled immediately upon closure
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8059/shard-hsw7/igt@gem_ctx_exec@basic-nohangcheck.html https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_8059/shard-snb4/igt@gem_ctx_exec@basic-nohangcheck.html
Starting subtest: basic-nohangcheck
(gem_ctx_exec:1552) CRITICAL: Test assertion failure function nohangcheck_hostile, file ../tests/i915/gem_ctx_exec.c:325:
(gem_ctx_exec:1552) CRITICAL: Failed assertion: err == 0
(gem_ctx_exec:1552) CRITICAL: Last errno: 2, No such file or directory
(gem_ctx_exec:1552) CRITICAL: Hostile unpreemptable context was not cancelled immediately upon closure
Subtest basic-nohangcheck failed.
````